--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "kspa-demo",
-  "version": "0.0.1",
+  "name": "kspa",
+  "description": "Advanced Kendo Router SPA Example",
+  "author": "Márton Sági",
+  "license": "MIT",
+  "version": "0.1",
   "devDependencies": {
     "bower": "^1.7.7",
     "grunt": "^0.4.5",
